--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,5 @@ nadine_coiffure:
     resource: "@NadineCoiffureBundle/Resources/config/routing.yml"
     prefix:   /
 
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
